--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -2519,3 +2519,18 @@ p a.imgpartners:nth-child(4) img {
     width: 100%;
     height: 100%;
 }
+
+.thin {
+  font-size: 44px;
+  font-family: robotocondenced;
+}
+
+.regular {
+  font-size: 44px;
+  font-family: robotolight;
+}
+
+.bold {
+  font-size: 44px;
+  font-family: oswaldbold;
+}
