--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -2483,11 +2483,12 @@ a img.aligncenter {
 
 p.button a {
 	background-color: #a3aab3;
-  padding:10px 18px;
+  padding:10px 14px;
   color: #ffffff !important;
   margin: 0 12px;
   font-family: robotocondensed;
   font-size: 18px;
+  font-weight: bold;
 }
 p.button a:hover {
 	background-color: #990101;
@@ -2521,7 +2522,7 @@ p a.imgpartners:nth-child(4) img {
 
 .thin {
   font-size: 44px;
-  font-family: robotocondenced;
+  font-family: robotocondensed;
 }
 
 .regular {
