--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -1654,25 +1654,27 @@ width: 100%;
 	height: 200px;
 	padding: 0 15%;
 }
-.slider h1.with-excerpt{
-font-size: 3.5em;
+.slider h1.with-excerpt {
+font-size: 6.5em;
 width: 50%;
-line-height: 40px	;
+line-height: 40px;
 text-align: left;
 display: inline-block;
 position: relative;
 vertical-align: top;
-margin-top: 90px;
+margin-top: 131px;
+padding-left: 96px;
 }
 
-.slider p{
-	color: 	#ffffff;
-font-size: 2em;
-width: 40%;
+.slider p {
+color: #ffffff;
+font-size: 2.7em;
+width: 44%;
 position: relative;
-padding-left: 40px;
+padding-left: 22px;
 display: inline-block;
-margin-top: 80px;
+margin-top: 85px;
+line-height: 148%;
 }
 
 /*------------------------------------*\
