Adding back nav services image.  Fixing responsive styling on button section.

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -2073,6 +2073,12 @@ section[role="blog"] .date {
 
 }
 
+@media only screen and (max-width:800px) {
+ #section_items li div {
+   width: 100%;
+ }
+}
+
 @media only screen and (max-width:900px) {
 
 	
