Creating shortcode to take leadership category

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -1398,7 +1398,7 @@ footer .icons {display: none;}
 
 }
 
-.footer .social {
+.social {
 
 	float: left;
 
@@ -1408,7 +1408,7 @@ footer .icons {display: none;}
 
 }
 
-.footer .social li {
+.social li {
 
 	display: inline-block;
 
@@ -1418,7 +1418,7 @@ footer .icons {display: none;}
 
 }
 
-.footer .social li a {
+.social li a {
 
 	display: block;
 
@@ -1430,37 +1430,37 @@ footer .icons {display: none;}
 
 }
 
-.footer .social li.fb a {
+.social li.fb a {
 
 	background: url(img/ico-facebook.png) no-repeat 0 0;
 
 }
 
-.footer .social li.gplus a {
+.social li.gplus a {
 
 	background: url(img/ico-google.png) no-repeat 0 0;
 
 }
 
-.footer .social li.tw a {
+.social li.tw a {
 
 	background: url(img/ico-twitter.png) no-repeat 0 0;
 
 }
 
-.footer .social li.li a {
+.social li.li a {
 
 	background: url(img/ico-linkedin.png) no-repeat 0 0;
 
 }
 
-.footer .social li.yt a {
+.social li.yt a {
 
 	background: url(img/ico-youtube.png) no-repeat 0 0;
 
 }
 
-.footer .social li a:hover {
+.social li a:hover {
 
 	background-position: 0 -29px;
 
