--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -1136,25 +1136,27 @@ section[role="blog"] .wrap {
 
 }
 
+section[role="blog"] .all-posts{
+	width: 650px;
+	float: left;
+}
 
 
 section[role="blog"] h3 {
 
 	background-color:#f0f2f4;
 
-	color: #676d73;
+	color: #667280;
 
 	font-size: 14px;
 
-	font-weight:bold;
+	font-family: robotobold;
 
 	text-align:left;
 
 	padding: 10px;
 
 	margin: 0 0 30px;
-
-	border-radius: 10px 15px 10px 15px / 15px 10px 15px 10px;
 
 }
 
@@ -1171,6 +1173,7 @@ section[role="blog"] li {
 section[role="blog"] select {
 
 	margin-left:40px;
+	margin-bottom: 30px;
 
 }
 
@@ -1200,13 +1203,23 @@ section[role="blog"] .date {
 
 }
 
-.posts-sidebar{
-
-	margin-bottom:20px;
+.post-separator{
+	margin: 3.42% auto;
+	background:#e6e8ea;
+	width:100%;
+	height:1px;
 
 }
 
-section[role="blog"] .content {
+.posts-sidebar{
+	width: 240px;
+	margin-bottom:20px;
+	margin-left: 20px;
+	float: right;
+
+}
+
+section[role="blog"] .post-content {
 
 	float: left;
 
@@ -1314,6 +1327,11 @@ section[role="blog"] p {
 
 	line-height: 24px;
 
+}
+
+section[role="blog"] .post-content p.button {
+	float:right;
+	
 }
 
 section[role="blog"] .view-article {
