--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -1941,6 +1941,10 @@ section[role="trusted"] .wrap ul{		width:85% !important; margin:0 auto !importan
 	padding-top: 17px;
 
 	padding-bottom:15px;
+	
+	-webkit-box-shadow: 0px 6px 10px rgba(0,0,0,0.2), 0 0 0 #333332 inset;
+	-moz-box-shadow: 0px 6px 10px rgba(0,0,0,0.2), 0 0 0 #333332 inset;
+	box-shadow: 0px 6px 10px rgba(0,0,0,0.2), 0 0 0 #333332 inset;
 
 }.nav > ul > li {	
 
@@ -1970,7 +1974,19 @@ section[role="trusted"] .wrap ul{		width:85% !important; margin:0 auto !importan
 
 	margin-top:0;
 
-	box-shadow: -10px 0 12px #999999;    min-width: 172px;    padding-bottom: 6px;    padding-left: 0;    padding-top: 6px;    position: absolute;    right: 125px;	display:none;    top: 0;    z-index: 1;	    background:url(img/sombra-ul.jpg) repeat-y right top #fafbfc; 	}	
+	-webkit-box-shadow: 0px 6px 10px rgba(0,0,0,0.2), 0 0 0 #333332 inset;
+	-moz-box-shadow: 0px 6px 10px rgba(0,0,0,0.2), 0 0 0 #333332 inset;
+	box-shadow: 0px 6px 10px rgba(0,0,0,0.2), 0 0 0 #333332 inset;    
+	min-width: 172px;    
+	padding-bottom: 6px;    
+	padding-left: 0;    
+	padding-top: 6px;    
+	position: absolute;   
+	right: 125px;	display:none;    
+	top: 0;    
+	z-index: 1;	    
+	background:url(img/sombra-ul.jpg) repeat-y right top #fafbfc; 	
+	}	
 
 .nav > ul > li > .sub-menu > li {		display: block;		float: none;		margin: 0;		padding: 0;	}	
 
