--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -710,28 +710,35 @@ section[role="main"] .view-article {
 	float:right;
 	margin-top:30px;
 }
+section[role="leader"] {
+  padding: 0;
+}
 
 section[role="leader"] ul {
   list-style-type: none;
+  padding: 0;
 }
 
 section[role="leader"] ul li {
   display: inline;
   width: 199px;
-  margin: 0 9px;
+  margin: 30px 14px 0 14px;
   line-height: 22px;
 }
+
 section[role="leader"] ul li a:hover {
   text-decoration: none;
 }
 section[role="leader"] h4 {
   font-family: robotoregular;
-  margin: 10px 0 0 0;
+  font-size: 18px;
+  margin: 0;
 }
 section[role="leader"] .tagline {
   font-family: robotolight;
   font-size: 14px;
   color: #667280;
+  line-height: 3px;
 }
 
 /*------------------------------------*\
