Styling twitter section

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -1196,22 +1196,22 @@ section[role="blog"] h3 {
 }
 
 section[role="blog"] li {
-
 	list-style: none;
-
-	font-size:12px;
-
+	font-size: 12px;
+	font-family: robotolight;
 }
 
 
 
 section[role="blog"] select {
-
 	margin-left:40px;
 	margin-bottom: 30px;
-
 }
 
+section[role="blog"] .twitter-follow-button {
+	margin-left:40px;
+	margin-bottom: 30px;
+}
 
 
 section[role="blog"] article {
