--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -1383,7 +1383,14 @@ section[role="blog"] .view-article {
 
 }	
 
-
+section[role="blog"] .older {
+  display: inline-block;
+  margin: 0 10px;
+}
+section[role="blog"] .newer {
+  display: inline-block;
+  margin: 0 10px;
+}
 
 /** Submenu **/
 
