--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -893,9 +893,10 @@ ul.section_items li {
 .section_items li img {
 	vertical-align: top;
 	padding-right: 25px;
+	margin-bottom: 15px;
 }
 .section_items li div {
-	width: 760px;
+	width: 85%;
 	display: inline-block;
 }
 .section_items li div > h4 {
@@ -2959,6 +2960,23 @@ section[role="leader"] .leader-popout {
     text-align: center;
   }
 
+}
+
+@media only screen and (max-width:930px) {
+  .section_items li div {
+  width: 100%;
+  }
+  
+  .section_items li div > h4 {
+  text-align: center;
+  }
+  
+  .section_items li img {
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
+  padding: 0;
+  }
 }
 
 @media only screen and (max-width:650px) {
