--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -2745,6 +2745,7 @@ section[role="leader"] .leader-popout {
 /*  margin-top: 45px;*/
   display: table-cell;
   vertical-align: middle;
+  padding-right: 40px;
 }
 
 .slider p {
@@ -2753,7 +2754,7 @@ section[role="leader"] .leader-popout {
   width: 48%;
   max-width: 480px;
   position: relative;
-  padding-left: 40px;
+/*  padding-left: 40px;*/
   display: inline-block;
 /*  margin-top: 41px;*/
   display: table-cell;
@@ -2780,7 +2781,7 @@ section[role="leader"] .leader-popout {
     font-size: 2.5em;
     width: 48%;
     position: relative;
-    padding-left: 40px;
+    /*padding-left: 40px;*/
     display: inline-block;
   /*  margin-top: 41px;*/
     display: table-cell;
@@ -2789,34 +2790,7 @@ section[role="leader"] .leader-popout {
 
 }
 
-@media only screen and (max-width:1100px) {
 
-  .slider h1.with-excerpt {
-    font-size: 4.5em;
-    width: 50%;
-    line-height: 70px;
-    text-align: right;
-    display: inline-block;
-    position: relative;
-/*    vertical-align: top;*/
-/*    margin-top: 49px;*/
-    padding: 0px;
-    display: table-cell;
-    vertical-align: middle;
-  }
-
-  .slider p {
-    color: #ffffff;
-    font-size: 2.2em;
-    position: relative;
-    padding-left: 40px;
-/*    margin-top: 47px;*/
-    width: 49%;
-    display: table-cell;
-    vertical-align: middle;
-  }
-
-}
 
 
 
@@ -2826,6 +2800,7 @@ section[role="leader"] .leader-popout {
    }*/
   .slider-content.with-excerpt {
     display: block;
+    text-align: center;
   }
     
   .slider h1.with-excerpt {
@@ -2848,6 +2823,7 @@ section[role="leader"] .leader-popout {
     margin-top: 5px;
     width: 100%;
     text-align: center;
+    display: inline-block;
   }
 
 }
@@ -2893,7 +2869,7 @@ section[role="leader"] .leader-popout {
   }
     
   .slider h1.with-excerpt {
-    font-size: 2.8em;
+    font-size: 3.2em;
     line-height: 40px;
     display: inline-block;
     position: relative;
