--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -944,7 +944,7 @@ header .icons {
 	top: 0;
 }
 
-.search {
+.search-form {
 	width: 32px;
 	height: 32px;
 	display: inline-block;
@@ -957,19 +957,20 @@ header .icons {
 	-ms-transition: all .3s ease;
 	-o-transition: all .3s ease;
 }
-.search input {
+.search-form input {
 	width: 200px;
 	display: none;
 }
 
-.search:hover {
-	width: 232px;
-	background-position: 0 bottom;
-	padding: 0 0 0 32px;
+.search-form:hover {
+	width: 240px;
+  background-position: 0 bottom;
+  padding: 0 0 0 32px;
+  overflow: hidden;
 }
 
-.search form {float: left;}
-.search:hover input {
+.search-form form {float: left;}
+.search-form:hover input {
 	display: block;
 	line-height: 28px;
 	border: 1px solid #f1f3f5;
