--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -2963,12 +2963,21 @@ section[role="leader"] .leader-popout {
 }
 
 @media only screen and (max-width:900px) {
-  .columns3{
+  .cloud-platform .columns3{
     float: none;
     width: 100%;
     margin-left: auto !important;
     margin-right: auto !important;
     text-align: center;
+  }
+
+}
+
+@media only screen and (max-width:900px) {
+  .columns3{
+    float: left;
+    width: 100%;
+    margin: 0 !important;
   }
 
 }
